--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
               <h5 class="card-title">C/C++ Course</h5>
               <p class="card-text">In this course we will teach you about basic programing language.You will learn about C/C++ and Project course.</p>
               <div class="re-l d-flex justify-content-between">
-                <a href="http://127.0.0.1:5501/index3.html" class="btn btn-primary">Register</a>
+                <a href="index3.html" class="btn btn-primary">Register</a>
                 <p style="color: red; font-size: 25px; margin: 0; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">69$</p>
               </div>
             </div>
@@ -67,7 +67,7 @@
               <h5 class="card-title">HTML/CSS/BOOTSRAP/JS Course</h5>
               <p class="card-text">In this course you will learn about the basic programing language of Web Developer.</p>
               <div class="re-l d-flex justify-content-between">
-                <a href="http://127.0.0.1:5501/index3.html" class="btn btn-primary">Register</a>
+                <a href="index3.html" class="btn btn-primary">Register</a>
                 <p style="color: red; font-size: 25px; margin: 0; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">99$</p>
               </div>
               
@@ -79,7 +79,7 @@
               <h5 class="card-title">PHP Course</h5>
               <p class="card-text">PHP is a server scripting language, and a powerful tool for making dynamic and interactive Web pages.</p>
               <div class="re-l d-flex justify-content-between">
-                <a href="http://127.0.0.1:5501/index3.html" class="btn btn-primary">Register</a>
+                <a href="index3.html" class="btn btn-primary">Register</a>
                 <p style="color: red; font-size: 25px; margin: 0; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">89$</p>
               </div>
             </div>
@@ -90,7 +90,7 @@
               <h5 class="card-title">React JS Course</h5>
               <p class="card-text">You'll learn how to start with React and build powerful interactive applications.</p>
               <div class="re-l d-flex justify-content-between">
-                <a href="http://127.0.0.1:5501/index3.html" class="btn btn-primary">Register</a>
+                <a href="index3.html" class="btn btn-primary">Register</a>
                 <p style="color: red; font-size: 25px; margin: 0; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">99$</p>
               </div>
             </div>
@@ -101,7 +101,7 @@
               <h5 class="card-title">JAVA Course</h5>
               <p class="card-text">Learn to code in Java — a robust programming language used to create software, web and mobile apps, and more.</p>
                <div class="re-l d-flex justify-content-between">
-                <a href="http://127.0.0.1:5501/index3.html" class="btn btn-primary">Register</a>
+                <a href="index3.html" class="btn btn-primary">Register</a>
                 <p style="color: red; font-size: 25px; margin: 0; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">99$</p>
               </div>
             </div>
@@ -112,7 +112,7 @@
               <h5 class="card-title">Flutter Course</h5>
               <p class="card-text">Learn Flutter & Dart Fundamentals With Step-By-Step Instructions To Build An App Portfolio.</p>
                <div class="re-l d-flex justify-content-between">
-                <a href="http://127.0.0.1:5501/index3.html" class="btn btn-primary">Register</a>
+                <a href="index3.html" class="btn btn-primary">Register</a>
                 <p style="color: red; font-size: 25px; margin: 0; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">99$</p>
               </div>
             </div>
