--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
         <div class="dashbord">
             <div class="top-brand">
                 <div class="lgo">
-                    <a href="http://127.0.0.1:5501/index.html">
+                    <a href="index.html">
                         <img src="Pic_Project/Etec Logo.png" alt="">
                      </a>
                 </div>
